// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RunDataPanel/> custom display props 1`] = `
<div
  className="panel panel-default full-width"
>
  <div
    className="panel-heading"
  >
    Results
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <ul
          className="list-group clearfix"
          style={
            Object {
              "listStyle": "none",
            }
          }
        >
          <li
            className="list-group-item form-step-tab active"
            onClick={[Function]}
          >
            Upload Files
          </li>
          <li
            className="list-group-item form-step-tab"
            onClick={[Function]}
          >
            Copy-and-Paste Data
          </li>
          <li
            className="list-group-item form-step-tab"
            onClick={[Function]}
          >
            Enter Data Into Grid
          </li>
        </ul>
        <div
          className="clearfix"
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <div
          className="form-step active"
        >
          <span
            className="translator--toggle__wizard"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-12"
              >
                <div
                  className="wizard-row--container"
                >
                  <div>
                    <div
                      className="file-upload--container block"
                    >
                      <label
                        className="file-upload--label"
                        htmlFor="fileUpload"
                        onDragEnter={[Function]}
                        onDragLeave={[Function]}
                        onDragOver={[Function]}
                        onDrop={[Function]}
                      >
                        <i
                          aria-hidden="true"
                          className="fa fa-cloud-upload fa-2x cloud-logo"
                        />
                        Select file or drag and drop here.
                      </label>
                      <input
                        accept=""
                        className="file-upload--input"
                        id="fileUpload"
                        multiple={false}
                        name="fileUpload"
                        onChange={[Function]}
                        type="file"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </span>
          <div
            className="row"
          >
            <div
              className="col-md-9"
            >
              
            </div>
            <div
              className="col-md-3"
            >
              <div
                className="pull-right"
              >
                <a
                  className="btn btn-info"
                  href="/labkey/Sample%20Management%202/assay-template.view?rowId=5051"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  title="Download Template"
                >
                  <span
                    className="fa fa-download"
                  />
                   Template
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-step"
        >
          <form
            disabled={false}
            onError={[Function]}
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-group row"
            >
              <label
                className="control-label hidden"
                data-required={false}
                htmlFor="frc-rundata-1088"
              >
                
              </label>
              <div
                className="col-sm-12"
              >
                <textarea
                  className="form-control"
                  cols={-1}
                  disabled={false}
                  id="frc-rundata-1088"
                  name="rundata"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Paste in a tab-separated set of values (including column headers)."
                  required={false}
                  rows={10}
                  value=""
                />
              </div>
            </div>
          </form>
        </div>
        <div
          className="form-step"
        >
          <div>
            <div
              className="row QueryGrid-bottom-spacing"
            >
              <div
                className="col-sm-4"
              >
                <div
                  className="btn-group"
                >
                  <button
                    className="btn btn-default"
                    disabled={true}
                    onClick={[Function]}
                    title="Delete Rows"
                    type="button"
                  >
                    Delete Rows
                  </button>
                </div>
              </div>
            </div>
            <div
              className="editable-grid__container"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <div
                className=""
              >
                <div
                  className="grid-messages"
                />
                <table
                  className="table-cellular table-striped table-bordered"
                >
                  <thead>
                    <tr>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": undefined,
                          }
                        }
                      >
                        <input
                          checked={false}
                          disabled={false}
                          onChange={[Function]}
                          type="checkbox"
                        />
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "45px",
                          }
                        }
                      >
                        Row
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Specimen ID
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Participant ID
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Visit ID
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Date
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Healthy
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        File
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Text Area
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr
                      className="grid-empty"
                    >
                      <td
                        colSpan={9}
                      >
                        Start by adding the quantity of assay data rows you want to create.
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
            <div
              className="editable-grid__controls form-group margin-top"
            >
              <span
                className="input-group"
              >
                <span
                  className="input-group-btn"
                >
                  <button
                    className="btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    Add
                  </button>
                </span>
                <input
                  className="form-control"
                  disabled={false}
                  max={1000}
                  min={1}
                  name="addCount"
                  onBlur={[Function]}
                  onChange={[Function]}
                  style={
                    Object {
                      "width": "65px",
                    }
                  }
                  type="number"
                  value="1"
                />
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "padding": "6px 8px",
                    }
                  }
                >
                  row
                  <span
                    className="label-help-target"
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                      data-icon="question-circle"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="top-spacing"
    />
  </div>
</div>
`;

exports[`<RunDataPanel/> default props 1`] = `
<div
  className="panel panel-default full-width"
>
  <div
    className="panel-heading"
  >
    Results
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <ul
          className="list-group clearfix"
          style={
            Object {
              "listStyle": "none",
            }
          }
        >
          <li
            className="list-group-item form-step-tab active"
            onClick={[Function]}
          >
            Upload Files
          </li>
          <li
            className="list-group-item form-step-tab"
            onClick={[Function]}
          >
            Copy-and-Paste Data
          </li>
          <li
            className="list-group-item form-step-tab"
            onClick={[Function]}
          >
            Enter Data Into Grid
          </li>
        </ul>
        <div
          className="clearfix"
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <div
          className="form-step active"
        >
          <span
            className="translator--toggle__wizard"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-12"
              >
                <div
                  className="wizard-row--container"
                >
                  <div>
                    <div
                      className="file-upload--container block"
                    >
                      <label
                        className="file-upload--label"
                        htmlFor="fileUpload"
                        onDragEnter={[Function]}
                        onDragLeave={[Function]}
                        onDragOver={[Function]}
                        onDrop={[Function]}
                      >
                        <i
                          aria-hidden="true"
                          className="fa fa-cloud-upload fa-2x cloud-logo"
                        />
                        Select file or drag and drop here.
                      </label>
                      <input
                        accept=""
                        className="file-upload--input"
                        id="fileUpload"
                        multiple={false}
                        name="fileUpload"
                        onChange={[Function]}
                        type="file"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </span>
          <div
            className="row"
          >
            <div
              className="col-md-9"
            >
              
            </div>
            <div
              className="col-md-3"
            >
              <div
                className="pull-right"
              >
                <a
                  className="btn btn-info"
                  href="/labkey/Sample%20Management%202/assay-template.view?rowId=5051"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  title="Download Template"
                >
                  <span
                    className="fa fa-download"
                  />
                   Template
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-step"
        >
          <form
            disabled={false}
            onError={[Function]}
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-group row"
            >
              <label
                className="control-label hidden"
                data-required={false}
                htmlFor="frc-rundata-1088"
              >
                
              </label>
              <div
                className="col-sm-12"
              >
                <textarea
                  className="form-control"
                  cols={-1}
                  disabled={false}
                  id="frc-rundata-1088"
                  name="rundata"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Paste in a tab-separated set of values (including column headers)."
                  required={false}
                  rows={10}
                  value=""
                />
              </div>
            </div>
          </form>
        </div>
        <div
          className="form-step"
        >
          <div>
            <div
              className="row QueryGrid-bottom-spacing"
            />
            <div
              className="editable-grid__container"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <div
                className=""
              >
                <div
                  className="grid-messages"
                />
                <table
                  className="table-cellular table-striped table-bordered"
                >
                  <thead>
                    <tr>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "45px",
                          }
                        }
                      >
                        Row
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Specimen ID
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Participant ID
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Visit ID
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Date
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Healthy
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        File
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Text Area
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr
                      className="grid-empty"
                    >
                      <td
                        colSpan={8}
                      >
                        Start by adding the quantity of assay data rows you want to create.
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
            <div
              className="editable-grid__controls form-group margin-top"
            >
              <span
                className="input-group"
              >
                <span
                  className="input-group-btn"
                >
                  <button
                    className="btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    Add
                  </button>
                </span>
                <input
                  className="form-control"
                  disabled={false}
                  max={1000}
                  min={1}
                  name="addCount"
                  onBlur={[Function]}
                  onChange={[Function]}
                  style={
                    Object {
                      "width": "65px",
                    }
                  }
                  type="number"
                  value="1"
                />
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "padding": "6px 8px",
                    }
                  }
                >
                  row
                  <span
                    className="label-help-target"
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                      data-icon="question-circle"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="top-spacing"
    />
  </div>
</div>
`;

exports[`<RunDataPanel/> loading state based on gridModel 1`] = `
<div
  className="panel panel-default full-width"
>
  <div
    className="panel-heading"
  >
    Results
  </div>
  <div
    className="panel-body"
  >
    <span
      className=""
    >
      <i
        aria-hidden="true"
        className="fa fa-spinner fa-pulse"
      />
       
      Loading...
    </span>
  </div>
</div>
`;
